--- a/pidesktop-base/DEBIAN/control
+++ b/pidesktop-base/DEBIAN/control
@@ -1,7 +1,7 @@
 Package: pidesktop-base
-Version: 0.1.0
+Version: 0.1.2
 Section: free
 Priority: optional
 Architecture: all
-Maintainer: xiele@embest-tech.com
-Description: Pi Desktop(A lowcost desktop PC based on Raspberry Pi)
+Maintainer: hoopsurfer
+Description: PiDeskTop Case Power Support and mSATA Support
