--- a/pidesktop-base/lib/systemd/system/pidesktop-rtcsync.service
+++ b/pidesktop-base/lib/systemd/system/pidesktop-rtcsync.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=PiDeskTop Sync RTC
+Description=pidesktop sync rtc
 DefaultDependencies=no
 Before=shutdown.target
 
 [Service]
 Type=oneshot
-ExecStart=/bin/bash /usr/share/PiDesktop/script/sync-hwclock
+ExecStart=/bin/bash /usr/share/pidesktop/script/pd-rtcsync
 
 [Install]
 WantedBy=reboot.target poweroff.target
