--- a/pidesktop-base/DEBIAN/control
+++ b/pidesktop-base/DEBIAN/control
@@ -1,8 +1,7 @@
 Package: pidesktop-base
-Version: 0.1.3
+Version: 0.1.4
 Section: free
 Priority: optional
 Architecture: all
 Maintainer: hoopsurfer
-Description: PiDeskTop Case Power Support and mSATA Support
-
+Description: Pi DeskTop Case Power+RTC+mSATA Support
