--- a/pidesktop-base/lib/systemd/system/pidesktop-powerkey.service
+++ b/pidesktop-base/lib/systemd/system/pidesktop-powerkey.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=PiDesktop Power Button Service
+Description=pidesktop power button service
 After=local-fs.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/python /usr/share/pidesktop/python/pd-powerkey.py
+ExecStart=/usr/bin/python -u /usr/share/pidesktop/python/pd-powerkey.py
 
 [Install]
 WantedBy=multi-user.target
