--- a/pidesktop-base/lib/systemd/system/pidesktop-shutdown.service
+++ b/pidesktop-base/lib/systemd/system/pidesktop-shutdown.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=PiDesktop Shutdown Reboot Service
+Description=pidesktop shutdown service
 DefaultDependencies=no
 Before=shutdown.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/python /usr/share/pidesktop/python/pd-shutdown.py
+ExecStart=/usr/bin/python -u /usr/share/pidesktop/python/pd-shutdown.py
 
 [Install]
-WantedBy=reboot.target shutdown.target
+WantedBy=shutdown.target
